first version submitted to the contest
Very simple emergent AI based on two impulses type.
* EAT
* Discovery

Ants have no memory of past turns but bot does have some recollection of map
next stage is to introduce ant persistance across game turns and path
finding

--- a/java_starter_package/Makefile
+++ b/java_starter_package/Makefile
@@ -1,17 +1,21 @@
 JAVAC=javac
 JAVAC_ARGS=
 
-SOURCES=MyBot.java
+SOURCES=Ants.java Bot.java Aim.java Ilk.java Order.java Tile.java AbstractSystemInputParser.java AbstractSystemInputReader.java MyBot.java
 CLASSES=$(SOURCES:%.java=%.class)
+JAR=MyBot.jar
 
 .PHONY: all clean
 
-all: $(CLASSES)
-	jar cvfm MyBot.jar Manifest.txt $(CLASSES)
+all: $(CLASSES) $(JAR)
+
+$(JAR): $(CLASSES)
+	jar cvfm $(JAR) Manifest.txt $(CLASSES)
 
 %.class: %.java
 	$(JAVAC) $(JAVAC_ARGS) $<
 
 clean:
+	-rm -Rf $(CLASSES)
 	-rm -Rf *.class
-	-rm -Rf *.jar
+	-rm -Rf $(JAR)
